<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context=".fragments.LoginFragment">
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/server_host"
            android:gravity="end"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/server_host_field"
            android:inputType="textUri"
            android:text="10.0.2.2"
            tools:text="localhost"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/server_port"
            android:gravity="end"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/server_port_field"
            android:inputType="number"
            android:text="8080"
            tools:text="port number here"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/user_name"
            android:gravity="end"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/server_username_field"
            android:inputType="text"
            android:text="ttrommlitz"
            tools:text="username here"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:gravity="end"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/server_password_field"
            android:inputType="textPassword"
            android:text="Soccer03"
            tools:text="password here"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/first_name"
            android:gravity="end"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/server_first_name_field"
            android:inputType="text"
            tools:text="first name here"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/last_name"
            android:gravity="end"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/server_last_name_field"
            android:inputType="text"
            tools:text="last name here"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/email"
            android:gravity="end"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/server_email_field"
            android:inputType="textEmailAddress"
            tools:text="email here"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/gender"
            android:gravity="center_vertical|end"/>
        <RadioGroup
            android:id="@+id/radio_group_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/male_button"
                android:text="@string/gender_male"/>
            <RadioButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/female_button"
                android:text="@string/gender_female"/>
        </RadioGroup>
    </TableRow>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/login_button"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_button_text"
            android:gravity="center"
            android:layout_margin="20dp"/>
        <Button
            android:id="@+id/register_button"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/register_button_text"
            android:gravity="center"
            android:layout_margin="20dp"/>
    </LinearLayout>
</TableLayout>
